feat: 添加生产 docker 配置

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn clean package -D maven.test.skip=true -P prod
 
       - name: Extract version from branch name
         id: extract_version
