--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,3 +43,4 @@ jobs:
         run: |
           docker build . --file zero-admin/Dockerfile --tag $DOCKER_REPO:$IMAGE_TAG
           docker push $DOCKER_REPO:$IMAGE_TAG
+        if: github.event_name == 'push'
