--- a/zero-admin/Dockerfile
+++ b/zero-admin/Dockerfile
@@ -3,7 +3,7 @@ LABEL maintainer="Akai"
 
 ENV SERVER_PORT=8080 LANG=C.UTF-8 LC_ALL=C.UTF-8 JAVA_OPTS=""
 
-ADD ./target/zero-admin-web.jar ./app.jar
+ADD zero-admin/target/zero-admin-web.jar ./app.jar
 
 EXPOSE 8080
 CMD ["java", "-jar", "./app.jar"]
